@@ -22,6 +22,7 @@ Current Version: RGFW 1.5.5-dev
 - add flags example
 - fix `RGFW_window_setMaxSize` / `RGFW_window_setMinSize` winapi, use `SetPropA` `GetPropA` to get the window in `WndProc`
 - make RGFW_window_isMaximized actually maximize the window width the API (X11/Windows)
+- fix RGFW_window_setBorder not working after window creation (X11)
 
 Release:    RGFW 1.5 (Jan 14, 2024)
 -----------------------------------------------
